--- a/.env
+++ b/.env
@@ -3,7 +3,4 @@ REACT_EDITOR=true
 SASS_PATH=./src/styles:./node_modules
 
 
-# TODO GRAPHQL HOST
-REACT_APP_GRAPHQL_HOST=/api/graphql//
-REACT_APP_GRAPHQL_SCHEMA_KEY=key
-PUBLIC_URL=/
+PUBLIC_URL=/radius
