--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 SKIP_PREFLIGHT_CHECK=true
+FAST_REFRESH=false
 REACT_EDITOR=true
 SASS_PATH=./src/styles:./node_modules
 
-
+REACT_APP_YANDEX_API_KEY=529da288-4918-4813-9724-2b07c0644a8e
 PUBLIC_URL=/radius
